heap、stack、local内存泄露的场景测试